configure eslint standard nodemon configure routes and server

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
     "extends": "standard",
     "rules": {
         "semi": 0,
-        "eol-last": "off"
+        "eol-last": "off",
+        "indent": 0
     }
 }
