Crud works using promisses (async, await), errorHandler, and created a template of mysql server configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "rules": {
         "semi": 0,
         "eol-last": "off",
-        "indent": 0
+        "indent": 0,
+        "space-before-function-paren": "off"
     }
 }
